{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 58,
  "lineage": "12d01c10-21e3-892e-a656-24111e038fb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094bbd9e922dc515d",
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:instance/i-05b02bf56ced2da7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b02bf56ced2da7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pbl4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-086d14dd0ceeda8e5",
            "private_dns": "ip-172-168-1-111.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.111",
            "public_dns": "ec2-13-250-27-90.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.27.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e757a904b603e0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8a6cdfae011e211",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05fb0a0ae39891f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.MyVpc_security_group_public",
            "aws_subnet.MyVPC_subnet_public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyVPC_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:internet-gateway/igw-0f5a11d41c63d6e03",
            "id": "igw-0f5a11d41c63d6e03",
            "owner_id": "692530166570",
            "tags": {
              "Name": "MyVPC_internet_gateway"
            },
            "tags_all": {
              "Name": "MyVPC_internet_gateway"
            },
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyVpc_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:route-table/rtb-0fb5e6d9d7942b9f3",
            "id": "rtb-0fb5e6d9d7942b9f3",
            "owner_id": "692530166570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MyVpc_route_table_private"
            },
            "tags_all": {
              "Name": "MyVpc_route_table_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyVpc_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:route-table/rtb-01814287329c856f7",
            "id": "rtb-01814287329c856f7",
            "owner_id": "692530166570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5a11d41c63d6e03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyVpc_route_table_public"
            },
            "tags_all": {
              "Name": "MyVpc_route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyVPC_internet_gateway",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dc6d99a0df58302",
            "route_table_id": "rtb-0fb5e6d9d7942b9f3",
            "subnet_id": "subnet-0f93bdc032beb9449"
          },
          "dependencies": [
            "aws_route_table.MyVpc_route_table_private",
            "aws_subnet.MyVPC_subnet_private",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ffe358c29370440",
            "route_table_id": "rtb-01814287329c856f7",
            "subnet_id": "subnet-0a8a6cdfae011e211"
          },
          "dependencies": [
            "aws_internet_gateway.MyVPC_internet_gateway",
            "aws_route_table.MyVpc_route_table_public",
            "aws_subnet.MyVPC_subnet_public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyVpc_security_group_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:security-group/sg-0bdf507d9972302c4",
            "description": "MyVpc_security_group_private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdf507d9972302c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.168.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05fb0a0ae39891f3d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "MyVpc_security_group_private",
            "name_prefix": "",
            "owner_id": "692530166570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MyVpc_security_group_private"
            },
            "tags_all": {
              "Name": "MyVpc_security_group_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MyVpc_security_group_public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyVpc_security_group_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:security-group/sg-05fb0a0ae39891f3d",
            "description": "MyVpc_security_group_public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fb0a0ae39891f3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyVpc_security_group_public",
            "name_prefix": "",
            "owner_id": "692530166570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MyVpc_security_group_public"
            },
            "tags_all": {
              "Name": "MyVpc_security_group_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:subnet/subnet-0f93bdc032beb9449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f93bdc032beb9449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692530166570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_subnet_private"
            },
            "tags_all": {
              "Name": "MyVPC_subnet_private"
            },
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:subnet/subnet-0a8a6cdfae011e211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8a6cdfae011e211",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692530166570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_subnet_public"
            },
            "tags_all": {
              "Name": "MyVPC_subnet_public"
            },
            "vpc_id": "vpc-03140689c7ccc8218"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:vpc/vpc-03140689c7ccc8218",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-0dd4a2953a3cc44d5",
            "default_route_table_id": "rtb-08882a91ab50d4baf",
            "default_security_group_id": "sg-006424eaba83ea0ca",
            "dhcp_options_id": "dopt-0d5d6e045d79fa9ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03140689c7ccc8218",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08882a91ab50d4baf",
            "owner_id": "692530166570",
            "tags": {
              "Name": "MyVpc"
            },
            "tags_all": {
              "Name": "MyVpc"
            }
          }
        }
      ]
    }
  ]
}